# refac

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: checks.yaml  pr-checks.yaml  publish-to-pypi.yaml
move_symbol/: import_utils.py  move_file.py  move_symbol.py  move_symbol_test.py
src/move_symbol/: __init__.py  __main__.py  import_utils_test.py  inplace_replace.py  move_file.py  move_symbol.py  replace.py  replace_str.py  replace_test.py  utils.py
src/move_symbol/visitors/: add_symbols.py  import_utils.py  remove_symbols.py  replace_import.py
src/movepy/: __init__.py  __main__.py  move_file.py  move_import.py  move_object.py  move_symbol.py  replace_str.py  utils.py
src/movepy/visitors/: __init__.py  add_symbols.py  import_utils.py  inplace_replace_import.py  remove_symbols.py  replace_import.py
src/refac/: __init__.py  __main__.py  move_file.py  move_import.py  move_symbol.py  replace_str.py  utils.py
src/refac/visitors/: import_utils.py  remove_symbols.py  replace_import.py
tests/: import_utils_test.py  move_symbol_test.py  replace_test.py
tests/visitors/: add_symbols_test.py  import_utils_test.py  remove_symbols_test.py  replace_import_test.py
